<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".adminActivity.groupDetails">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/serverDetailsShow"
        android:text="@string/groupDetails"
        android:textAlignment="center"
        android:textSize="@dimen/BoldText"
        android:background="@drawable/textview_shap"
        android:textColor="@color/colorTextButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerHorizontal="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            >

            <TextView
                android:id="@+id/putGroupName"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:hint="بنزين"
                android:textAlignment="center"
                android:textSize="@dimen/buttonText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groupName"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/BoldText"/>

        </LinearLayout> <!-- group Name-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            >

            <TextView
                android:id="@+id/putGroupPrice"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/textview_background"
                android:hint="50"
                android:textAlignment="center"
                android:textSize="@dimen/buttonText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/groupPrice"
                android:textSize="@dimen/BoldText" />

        </LinearLayout> <!-- group price-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshap"
            android:layout_marginTop="40dp"
            android:text="@string/users"
            android:onClick="choseUsers"
            android:textSize="@dimen/BoldText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshap"
            android:layout_marginTop="40dp"
            android:text="@string/service"
            android:textSize="@dimen/BoldText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshap"
            android:layout_marginTop="50dp"
            android:text="@string/editServerDetails"
            android:textSize="@dimen/BoldText"/>
    </LinearLayout>



</RelativeLayout>