<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.my_tower.my_tower.startPage.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNumLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/userNum"
                    android:textAlignment="center"
                    android:id="@+id/userNum"/>
                <!--<EditText-->
                    <!--android:id="@+id/userNum"-->
                    <!--android:layout_width="@dimen/login_width"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/userNum"-->
                    <!--android:inputType="number"-->
                    <!--android:textAlignment="center" />-->

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/avatar" />

        </LinearLayout> <!-- user number -->


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userPasswordLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="@dimen/login_width"
                    android:layout_height="wrap_content"
                    android:hint="@string/userPassword"
                    android:inputType="textPassword"
                    android:textAlignment="center" /><!-- user password-->

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/passord"  />

        </LinearLayout> <!-- user password -->


        <Button
            android:id="@+id/buttonLogin"
            android:background="@drawable/buttonshap"
            android:textColor="@color/colorTextButton"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="login"
            android:textSize="@dimen/buttonTextLogin"
            android:text="@string/buttonLogin"
            android:textAlignment="center" /> <!-- login login -->
    </LinearLayout> <!-- info layout -->

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorSnackLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ></android.support.design.widget.CoordinatorLayout><!-- sncak connection internet -->


</RelativeLayout>
